# singleUAVMO

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements-python.txt  startup.py
Problem Generation/: City.py  City_nofly.py  Mountain.py  Mountain_nofly.py  Suburban.py  Suburban_nofly.py
configs/: paper_medium_multi.yaml  smoke_multi.yaml
docs/: multi_uav_protocol.md  reproducibility.md
matlabimplementation/: README.md  startup.m
problems/: terrainStruct_c_100_20_nofly_uav3.mat  terrainStruct_c_100_20_nofly_uav5.mat  terrainStruct_c_100_20_nofly_uav8.mat  terrainStruct_c_100_uav3.mat  terrainStruct_c_100_uav5.mat  terrainStruct_c_100_uav8.mat  terrainStruct_c_150_uav3.mat  terrainStruct_c_150_uav5.mat  terrainStruct_c_150_uav8.mat  terrainStruct_c_70_40_nofly.mat  terrainStruct_c_70_40_nofly_uav3.mat  terrainStruct_c_70_40_nofly_uav5.mat  terrainStruct_c_70_40_nofly_uav8.mat  terrainStruct_m_100.mat  terrainStruct_m_100_30c_nofly_uav3.mat  terrainStruct_m_100_30c_nofly_uav5.mat  terrainStruct_m_100_30c_nofly_uav8.mat  terrainStruct_m_100_uav3.mat  terrainStruct_m_100_uav5.mat  terrainStruct_m_100_uav8.mat  terrainStruct_m_200_20c_nofly_uav3.mat  terrainStruct_m_200_20c_nofly_uav5.mat  terrainStruct_m_200_20c_nofly_uav8.mat  terrainStruct_m_200_uav3.mat  terrainStruct_m_200_uav5.mat  terrainStruct_m_200_uav8.mat  terrainStruct_s_110_20_nofly.mat  terrainStruct_s_110_20_nofly_uav3.mat  terrainStruct_s_110_20_nofly_uav5.mat  terrainStruct_s_110_20_nofly_uav8.mat  terrainStruct_s_120.mat  terrainStruct_s_120_uav3.mat  terrainStruct_s_120_uav5.mat  (+8 more)
(+127 files in other folders)
